Fix hang condition due to pointer comparison, bug 690638.

DETAILS:

The clist buffer management mostly checked the amount of data in the buffer
by computing the difference between the limit and the current pointer. This
patch fixes the places that computed a new pointer of the desired amount
plus the current pointer and compared to the limit. If this overflowed
the register, then the sum was less than the (unsigned) limit pointer.

EXPECTED DIFFERENCES:

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10490 a1074d23-0009-0410-80fe-cf8c14f379e6